--- a/envs/install.yaml
+++ b/envs/install.yaml
@@ -4,7 +4,5 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - diamond=0.9.22
-  - hmmer=3.1b2
-  - ete3=3.1.1
-  - mercurial
+  - snakemake
+  - mamba
