--- a/envs/MAGpy-3.5.yaml
+++ b/envs/MAGpy-3.5.yaml
@@ -10,9 +10,9 @@ dependencies:
   - pplacer=1.1.alpha19
   - prodigal=2.6.3
   - fasttree=2.1.10
-  - diamond=0.9.22
+  - diamond=2.0.9
   - biopython=1.70
-  - sourmash=2.0.0a9
+  - sourmash=4.1.1
   - pfam_scan=1.6
   - perl-bioperl
 
